@@ -41,9 +41,17 @@ instance ToPyObject CInt where
             do po <- py_buildvalue cstr x
                fromCPyObject po
 
+instance ToPyObject CFloat where
+    toPyObject x =
+        withCString "s" $ \cstr ->
+            py_buildvalues cstr x >>= fromCPyObject
+
 ----------------------------------------------------------------------
 -- C imports
 
 foreign import ccall unsafe "glue.h Py_BuildValue"
  py_buildvalue :: CString -> CInt -> IO (Ptr CPyObject)
+
+foreign import ccall unsafe "glue.h Py_BuildValue"
+ py_buildvalues :: CString -> CFloat -> IO (Ptr CPyObject)
 
